ajouts fonctionnalités eventListener -cours

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,17 @@
 		<title>Roll</title>
 	</head>
 	<body>
+		<input
+			class="howMany"
+			type="range"
+			min="1"
+			max="10"
+			step="1"
+			name=""
+			id=""
+		/>
+		<span id="range-value">1</span>
+		<button id="rollDicesBtn">Lancer les dés</button>
 		<!-- Eh toi là, inutile de modifier le HTML : l'objectif est d'insérer des élements via JS ! Bonne chance ! -->
 		<div id="app">
 			<div class="board" id="player"></div>
